--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 @model PagedList.IPagedList<Models.EF.DotToChucHM>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Đợt tổ chức";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var listDTCHM = (List<Models.EF.DotToChucHM>)ViewBag.listDTCHM;
 }
