--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DkDHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DkDHM/Index.cshtml
@@ -2,7 +2,7 @@
 @using PagedList.Mvc
 @model PagedList.IPagedList<Models.EF.DotHienMau>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Đăng ký tổ chức đợt hiến máu";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var listDHM = (List<Models.EF.DotHienMau>)ViewBag.listDHM;
 }
