--- a/HiemMauNhanDao/HiemMauNhanDao/Views/LoginClient/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/LoginClient/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HiemMauNhanDao.Models.LoginModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Đăng nhập";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
