--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/CapnhatTTCN.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Models.EF.ThongTinCaNhan
 @{
-    ViewBag.Title = "CapnhatTTCN";
+    ViewBag.Title = "Cập nhật thông tin";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
