--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Models.EF.ThongTinCaNhan
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Thông tin cá nhân";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
