--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/LienKetNV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/LienKetNV.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Models.EF.NhanVienYTe
 @{
-    ViewBag.Title = "LienKetNV";
+    ViewBag.Title = "Liên kết bệnh viện";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -123,24 +123,16 @@
                                         <button type="submit" class="genric-btn primary-border radius"> Đăng ký thành viên</button>
                                     </div>
                                 </div>
-                            </div>
-                           
+                            </div>                           
                         }
                     </div>
-
                 </div>
 
             </div>
         </div>
     </div>
 </section>
-
-
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
+ 
 
 
 
