--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/_leftMenu2.cshtml
@@ -11,7 +11,7 @@
 
                 <li>
                     <a href="@Url.Action("CapnhatTTDV","DVLK")" class="d-flex">
-                        <p>Cập nhật thông đơn vị</p>
+                        <p>Cập nhật thông tin đơn vị</p>
                     </a>
                 </li>
                 <li>
@@ -64,7 +64,7 @@
             <ul class="list cat-list">
                 <li>
                     <a href="@Url.Action("EditBV","NhanVienYTe")" class="d-flex">
-                        <p>Cập nhật thông đơn vị</p>
+                        <p>Cập nhật thông tin bệnh viện</p>
                     </a>
                 </li>
                 <li>
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("DangBai","NhanVienYTe") " class="d-flex">
+                    <a href="@Url.Action("Index","DotToChucHM")" class="d-flex">
                         <p>Đăng bài</p>
                     </a>
                 </li>
