--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Hiến máu nhân đạo</title>
+    <title>  @ViewBag.Title  </title>
     <link rel="icon" href="~/Assets/client/img/logo6.png">
     <!-- Bootstrap CSS -->
 
@@ -64,8 +64,8 @@
                                         Đợt hiến máu
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="@Url.Action("Index","DTCHM") ">Tham gia</a>
-                                        <a class="dropdown-item" href="@Url.Action("Index","DkDHM")  ">Tổ chức</a>
+                                        <a class="dropdown-item" href="@Url.Action("Index","DTCHM") ">Tham gia hiến máu</a>
+                                        <a class="dropdown-item" href="@Url.Action("Index","DkDHM")  ">Tham gia tổ chức</a>
 
                                     </div>
                                 </li>
