--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/CapNhatTTDV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/CapNhatTTDV.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Models.EF.DonViLienKet
 @{
-    ViewBag.Title = "CapNhatTTDV";
+    ViewBag.Title = "Cập nhật thông tin";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -18,7 +18,12 @@
         </div>
     </div>
 </section>
-
+<script>
+    $(function () {
+        $('#AlertBox').removeClass('hide');
+        $('#AlertBox').delay(5000).slideUp(500);
+    });
+</script>
 
 <section class="blog_area section_padding">
     <div class="container">
@@ -30,8 +35,16 @@
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div class="blog_left_sidebar">
                     <h3 class="mb-30">Cập nhật thông đơn vị</h3>
-                    <div class="section-top-border">
-
+                    <hr />
+                    <div class="panel-body">
+                        @if (TempData["AlertMessage"] != null)
+                        {
+                            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                                @TempData["AlertMessage"]
+                            </div>
+                        }
+                    </div>
+                    <div>
                         <div class="row">
                             <div class="col-lg-12 col-md-8">
 
@@ -39,12 +52,13 @@
                                     @using (Html.BeginForm())
                                     {
                                         @Html.AntiForgeryToken()
+                                        @Html.ValidationSummary(true, "", new { @class = "form-control" })
                                         <table class="mt-10">
                                             <th style="width:400px">
                                                 <div>
                                                     <label>Mã đơn vị</label>
-                                                    @Html.ValidationSummary(true, "", new { @class = "form-control" })
-                                                    @Html.HiddenFor(model => model.IdBenhVien)
+
+                                                    @Html.EditorFor(model => model.IdDVLK, new { htmlAttributes = new { @class = "form-control",@readonly= "readonly" } })
 
 
                                                 </div>
@@ -52,8 +66,7 @@
                                             <th class="col-lg-6">
                                                 <div>
                                                     <label>Tên đơn vị</label>
-                                                    @Html.EditorFor(model => model.TenBenhVien, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.TenBenhVien, "", new { @class = "text-danger" })
+                                                    @Html.EditorFor(model => model.TenDonVi, new { htmlAttributes = new { @class = "form-control" } })
                                                 </div>
                                             </th>
                                         </table>
@@ -68,16 +81,15 @@
                                             <th class="col-lg-6">
                                                 <div>
                                                     <label>Số điện thoại</label>
-                                                    @Html.EditorFor(model => model.soDTBV, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.soDTBV, "", new { @class = "text-danger" })
+                                                    @Html.EditorFor(model => model.soDT, new { htmlAttributes = new { @class = "form-control" } })
+                                                    @Html.ValidationMessageFor(model => model.soDT, "", new { @class = "text-danger" })
                                                 </div>
                                             </th>
                                         </table>
                                         <div class="mt-10">
                                             <label>Địa chỉ</label>
-                                            <input type="email" name="EMAIL" placeholder=" Địa chỉ tạm trú"
-                                                   onfocus="this.placeholder = ''" onblur="this.placeholder = ' Địa chỉ '" required
-                                                   class="single-input">
+                                            @Html.EditorFor(model => model.diaChi, new { htmlAttributes = new { @class = "form-control" } })
+
                                         </div>
 
                                         <div class="mt-10">
@@ -86,19 +98,48 @@
                                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Minh chứng'" required
                                                    class="single-input">
                                         </div>
+                                        <div class="text-center " style="margin-top:20px">
+                                            <a class="genric-btn primary-border radius"  >Cập nhật</a>
+                                        </div>
                                     }
                                 </form>
                             </div>
                         </div>
-                        <div class="text-center " style="margin-top:20px">
-                            <a class="genric-btn primary-border radius" href="#">Cập nhật</a>
-                        </div>
+                        <hr />
+                        <h2>Lưu ý</h2>
+                        <table class="mt-10">
+                            <tr>
+                                <th style="width:400px">
+                                    <div>
+                                        <a>Điền đẩy đủ các thông tin ở trên</a>
+                                    </div>
+                                </th>
+                                <th class="col-lg-6">
+                                    <div>
+                                        <a>Số điện thoại : từ 8-12 số</a>
+                                    </div>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th style="width:400px">
+                                    <div>
+                                        <a>File minh chứng thuộc định dạng: pdf, doc, docx , png, jgp </a>
+                                    </div>
+                                </th>
+                                <th class="col-lg-6">
+                                    <div>
+                                        <a>Địa chỉ: tại thành phố Đà Nẵng</a>
+                                    </div>
+                                </th>
+                            </tr>
+                        </table>
                     </div>
 
                 </div>
 
             </div>
         </div>
+    </div>
 </section>
 
 <div>
