--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Home/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Trang chủ";
+    ViewBag.Title = "Hiến máu nhân đạo";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
