--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/EditBV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NhanVienYTe/EditBV.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Models.EF.BenhVien
 @{
-    ViewBag.Title = "EditBV";
+    ViewBag.Title = "Thông tin bệnh viện";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -18,7 +18,12 @@
         </div>
     </div>
 </section>
-
+<script>
+    $(function () {
+        $('#AlertBox').removeClass('hide');
+        $('#AlertBox').delay(5000).slideUp(500);
+    });
+</script>
 
 <section class="blog_area section_padding">
     <div class="container">
@@ -29,9 +34,18 @@
 
             <div class="col-lg-8 mb-5 mb-lg-0">
                 <div class="blog_left_sidebar">
-                    <h3 class="mb-30">Cập nhật thông đơn vị</h3>
-                    <div class="section-top-border">
+                    <h3 class="mb-30">Cập nhật thông tin bệnh viện</h3>
+                    <hr />
+                    <div class="panel-body">
+                        @if (TempData["AlertMessage"] != null)
+                        {
+                            <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                                @TempData["AlertMessage"]
+                            </div>
+                        }
+                    </div>
 
+                    <div>
                         <div class="row">
                             <div class="col-lg-12 col-md-8">
 
@@ -42,9 +56,9 @@
                                         <table class="mt-10">
                                             <th style="width:400px">
                                                 <div>
-                                                    <label>Id bệnh viện</label>
+                                                    <label>Mã bệnh viện</label>
                                                     @Html.ValidationSummary(true, "", new { @class = "form-control" })
-                                                    @Html.HiddenFor(model => model.IdBenhVien)
+                                                    @Html.EditorFor(model => model.IdBenhVien, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
 
 
                                                 </div>
@@ -86,23 +100,47 @@
                                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Minh chứng'" required
                                                    class="single-input">
                                         </div>
+                                        <div class="text-center " style="margin-top:20px">
+                                            <a class="genric-btn primary-border radius" href="#">Cập nhật</a>
+                                        </div>
                                     }
                                 </form>
                             </div>
                         </div>
-                        <div class="text-center " style="margin-top:20px">
-                            <a class="genric-btn primary-border radius" href="#">Cập nhật</a>
-                        </div>
+                        <hr />
+                        <h2>Lưu ý</h2>
+                        <table class="mt-10">
+                            <tr>
+                                <th style="width:400px">
+                                    <div>
+                                        <a>Điền đẩy đủ các thông tin ở trên</a>
+                                    </div>
+                                </th>
+                                <th class="col-lg-6">
+                                    <div>
+                                        <a>Số điện thoại : từ 8-12 số</a>
+                                    </div>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th style="width:400px">
+                                    <div>
+                                        <a>File minh chứng thuộc định dạng: pdf, doc, docx , png, jgp </a>
+                                    </div>
+                                </th>
+                                <th class="col-lg-6">
+                                    <div>
+                                        <a>Địa chỉ: tại thành phố Đà Nẵng</a>
+                                    </div>
+                                </th>
+                            </tr>
+                        </table>                        
                     </div>
-
+                </div>
                 </div>
 
             </div>
         </div>
+    
 </section>
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-
+ 
